# src/models/Expense.js
@@ -1,4 +1,3 @@
-
 const mongoose = require('mongoose');
 
 const expenseSchema = new mongoose.Schema({
@@ -13,15 +12,3 @@ const expenseSchema = new mongoose.Schema({
 });
 
 module.exports = mongoose.model('Expense', expenseSchema);
-
-// const mongoose = require('mongoose');
-
-// const expenseSchema = new mongoose.Schema({
-//   amount: { type: Number, required: true },
-//   category: { type: String, required: true },
-//   date: { type: Date, required: true },
-//   paymentMethod: { type: String, enum: ['cash', 'credit'], required: true },
-//   userId: { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true },
-// }, { timestamps: true });
-
-// module.exports = mongoose.model('Expense', expenseSchema);
